add function to remove bookmark

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="app">
-      <a-mark :mark="currentTab" actions="+-" @add="addBookmark"></a-mark>
+      <a-mark :mark="currentTab" :actions="currentTabAction" @add="addBookmark" @remove="removeBookmark"></a-mark>
       <div class="headline"><i class="fa fa-bookmark"></i><div class="hsep"></div>Bookmarks</div>
       <sort-by @update="updateSort"></sort-by>
       <content-list
