add function to all cards

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -15,7 +15,8 @@
       <content-list
         :sort-feature="sortFeature"
         :sort-order="sortOrder"
-        :full-list="bookmarks">
+        :full-list="bookmarks"
+        @remove="removeBookmark">
       </content-list>
     </div>
 
