add function to edit custom title and description

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -37,7 +37,9 @@
         :all-cat="allCat"
         @hide="showEdit=false"
         @addcat="addCat"
-        @removecat="removeCat">
+        @removecat="removeCat"
+        @changecustomtitle="changeCustomTitle"
+        @changedescription="changeDescription">
       </bookmark-edit>
     </div>
 
