add function to show long text when click in edit popup

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -36,6 +36,7 @@
         :mark="bookmarkToEdit"
         :all-cat="allCat"
         @hide="showEdit=false"
+        @clicktext="popText"
         @addcat="addCat"
         @removecat="removeCat"
         @changecustomtitle="changeCustomTitle"
