add saving to google drive; fix bug for toggling storage location and remove the need of two variables to determine actual used storage location

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -44,8 +44,8 @@
       </bookmark-edit>
       <misc-section
         :use-local="useLocal"
-        :signed-in="signedIn"
-        :remote-account="remoteAccount">
+        :remote-account="remoteAccount"
+        @signinout="signInOut">
       </misc-section>
     </div>
 
