fix wrong symlink

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   new Vue({
     el: "#wrapper",
     methods: {
-      openFirefox: () => window.open("https://addons.mozilla.org/en-GB/firefox/addon/sync-saved-windows/"),
-      openChrome: () => window.open("https://chrome.google.com/webstore/detail/sync-saved-windows/nfjkecjcakdlmcchjhelfiefamhnfhfa"),
+      openFirefox: () => window.open("https://addons.mozilla.org/en-GB/firefox/addon/sync-bookmarks/"),
+      openChrome: () => window.open("#"),
       openWeb: () => window.open("web", "_self"),
       openIssueTracker: () => window.open("https://github.com/ricwtk/sync-bookmarks/issues", "_self")
     }
