--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,79 @@
 <!DOCTYPE html>
-
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:url" content="https://ricwtk.github.io/sync-bookmarks">
-    <meta property="og:title" content="Sync Bookmarks">
-    <meta property="og:description" content="Save bookmarks and sync with Google Drive">
-    <meta name="description" content="Save bookmarks and sync with Google Drive">
-    <meta name="keywords" content="sync bookmarks, synchronise, google drive, bookmarks">
-    <title>Sync Bookmarks</title>
-    <link rel="icon" href="icons/icon.png?v=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="js/vue.min.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url" content="https://ricwtk.github.io/sync-saved-windows/web">
+  <meta property="og:title" content="Sync Bookmarks - Web">
+  <meta property="og:description" content="Save bookmarks and sync with Google Drive">
+  <meta name="description" content="Save bookmarks and sync with Google Drive">
+  <meta name="keywords" content="sync bookmarks, synchronise, google drive, bookmarks">
+  <title>Sync Bookmarks - Web</title>
+  <link rel="icon" href="icons/icon.png?v=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <script src="js/vue.min.js"></script>
+  <link href="index.css" rel="stylesheet">
+</head>
 
-  <body>
-    
-  </body>
+<body>
+  <div id="wrapper">
+    <div id="header" @click="openSyncBookmarksHome">
+      <img id="icon" src="icons/icon.png">
+      Sync Bookmarks
+      <div class="hsep"></div>
+      <i class="fa fa-firefox"></i>
+      <div class="hsep"></div>
+      <i class="fa fa-chrome"></i>
+      <div class="hsep"></div>
+      <i class="fa fa-globe"></i>
+    </div>
+    <div id="content">
+    <div id="sign-in-button" @click="clickOnAccount">
+      <div class="buttonContentWrapper">
+        <div class="buttonIcon">
+          <div class="svgButtonIcon">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 48 48" class="abcRioButtonSvg">
+              <g>
+                <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
+                <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path>
+                <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path>
+                <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path>
+                <path fill="none" d="M0 0h48v48H0z"></path>
+              </g>
+            </svg>
+          </div>
+        </div>
+        <span class="buttonContents">
+          <span v-if="signedIn">Sign out (Signed in as <i>{{ email }}</i>)</span>
+          <span v-else>Sign in with Google</span>
+        </span>
+      </div>
+    </div>
+    <div id="no-bookmark-message">
+      <div>
+        Bookmarks saved with <i class="fa fa-firefox"></i> or <i class="fa fa-chrome"></i> extension will be displayed here
+      </div>
+      <div><i class="fa fa-bars"></i> <i class="fa fa-caret-right"></i> <i class="fa fa-home"></i></div>
+    </div>
+    <single-bookmark v-for="bm in bookmarks"
+      :bookmark="bm"
+      @clicktext="showText"
+      @error="showError">
+    </single-window>
+    </div>
+    <global-actions
+      @refresh="refreshFromDatabase">
+    </global-actions>
+    <message v-if="message"
+      :message="message"
+      :type="messageType"
+      @close="closeMessage">
+    </message>
+  </div>
+  <script src="https://apis.google.com/js/api:platform.js?onload=checkSignInStatus" async defer></script>
+  <script src="index.js"></script>
+</body>
 
 </html>
