--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="sync bookmarks, synchronise, google drive, bookmarks">
   <title>Sync Bookmarks - Web</title>
   <link rel="icon" href="icons/icon.png?v=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,400,700" rel="stylesheet">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="js/vue.min.js"></script>
   <link href="index.css" rel="stylesheet">
