add function to edit title and description

--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,9 @@
       :info="{ allCategories: allCategories, arrangement: arrangement }"
       @clicktext="showText"
       @error="showError"
-      @addCat="addCat">
+      @addCat="addCat"
+      @changecustomtitle="changeCustomTitle"
+      @changedescription="changeDescription">
     </single-section>
     </div>
     <global-actions
