update categories edit

--- a/web/index.html
+++ b/web/index.html
@@ -70,9 +70,10 @@
       :info="{ allCategories: allCategories, arrangement: arrangement }"
       @clicktext="showText"
       @error="showError"
-      @addCat="addCat"
+      @addcat="addCat"
       @changecustomtitle="changeCustomTitle"
-      @changedescription="changeDescription">
+      @changedescription="changeDescription"
+      @removecat="removeCat">
     </single-section>
     </div>
     <global-actions
