--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,8 @@
       @addcat="addCat"
       @changecustomtitle="changeCustomTitle"
       @changedescription="changeDescription"
-      @removecat="removeCat">
+      @removecat="removeCat"
+      @removebookmark="removeBookmark">
     </single-section>
     </div>
     <global-actions
@@ -82,6 +83,7 @@
     <message v-if="message"
       :title="messageTitle"
       :message="message"
+      :prompt="messagePrompt"
       @close="closeMessage">
     </message>
   </div>
