update homepage and readme

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     el: "#wrapper",
     methods: {
       openFirefox: () => window.open("https://addons.mozilla.org/en-GB/firefox/addon/sync-bookmarks/"),
-      openChrome: () => window.open("#"),
+      openChrome: () => window.open("https://chrome.google.com/webstore/detail/sync-bookmarks/nhmikhiiiehhokigianadabbcbdbanmp/"),
       openWeb: () => window.open("web", "_self"),
       openIssueTracker: () => window.open("https://github.com/ricwtk/sync-bookmarks/issues", "_self")
     }
