Use vue.runtime.min.js in chrome extension

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="popup.css">
-    <script src="js/vue.min.js"></script>
+    <script src="js/vue.runtime.min.js"></script>
   </head>
 
   <body>
